syntax = "proto3";
package proto;
option go_package = "/proto";

// 该结构与consts结构一样，客户端服务器共用，只要定义就不能改变
enum AccountType {
  DEVICEID = 0;
  WX = 1;
  FB = 2;
  GIT = 3;
}



// 暂时这样，以后拆出来，游戏内状态和游戏外状态 todo：
enum GameState {
  //  在房间里
  IDLE = 0;
  WAIT = 1;
  //  已分到桌子
  INGAME = 2;
  LOGOUT = 3;
}

enum TableState {
  STATE_NONE = 0;
  // 在桌子，不过没开始游戏，只要有一个坐下，状态由none-》切换到waitready
  WAITREADY = 1;
  // 只有是quick的房间才会有这个状态，超过20秒，没有准备解散，或者有玩家退出解散
  CANCEL = 2;
  // 游戏开始了
  CHECK_RES = 3;
  GAMING = 4;
  SETTLEMENT = 5;
  // 中断了，游戏还没结束，都跑了！！
  ABORT = 6;
}

enum RoomType {
  ROOMTYPE_NONE = 0;
  QUICK = 1;
  FRIEND = 2;
  MATCH = 3;
}

enum ActionType {
  ACTIONTYPE_NONE = 0;
  FRAME_ONE = 1;
  MOVE = 2;
  ROTATE = 3;
  DROP = 4;
  QUICK_DROP = 5;
  // 道具，客户端用
  ITEM_BOOM = 9;
  ITEM_BUFF_DISTURB = 10;
  ITEM_ADD_ROW = 11;
  ITEM_DEL_ROW = 12;

  END = 100;
}

enum ItemType {
  COIN = 0;
}